# AI_demos

./: .gitignore  README.md
Agent_demos/AG2_demos/: ag2_intro.ipynb
Agent_demos/LangGraph_demos/: functional_conversation.ipynb  tools-routing.ipynb
Agent_demos/MCP_demos/: accountant_streamlit.py  mcp_accountant_streamlit.py  mcp_weather_server.py
Agent_demos/MCP_demos/demo_mcp_streamlit/: main copy.py  main.py  pyproject.toml
Agent_demos/MCP_demos/demo_mcp_streamlit/utils/: mcp_client.py  mcp_server.py
Agent_demos/Temporal_workflow_demos/temporal_accountant/: 2. run_worker.py  3. run_workflow.py  README.md  README_CONVERSION.html  README_CONVERSION.md  activities.py  requirements.txt  shared.py  workflows.py
Finetuning_demos/: LLM_Finetuning_GPT_o1.ipynb  Unsloth Llama-3.2 Conversational LoRA finetuning.ipynb
Galileo_demos/: galileo_hello_world.ipynb
Openai_demos/: LLM_Finetuning_GPT_o1.ipynb
SambaNova_demos/: context_lengths_notebook.ipynb  eval_gpt4omini.ipynb  eval_ollama.ipynb
SambaNova_demos/data/: doc1.txt  doc2.txt
Weaviate_db_demos/: blog_eval_answers_weaviate.csv  eval_weaviate_v_milvus_ragas.ipynb  weaviate_cloud_langchain.ipynb
Zilliz_db_demos/milvus_onboarding/: 3. RAG_basic_eval_langchain.ipynb
Zilliz_db_demos/milvus_onboarding/data/: movie_data.csv
